add courses names

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <li>Karachi</li>
         <li>Peshawar</li>
     </ul>
+
+    <h2>Saylani MASS IT Training</h2>
+
+    <ul>
+        <li>Web and App</li>
+        <li>Graphic Designing</li>
+        <li>Chatbot Development</li>
+    </ul>
 </body>
 </html>
